hard-gists/2890739/run.log
=== Docker Run Log for 2890739 ===
Started at: Mi 29. Okt 13:19:38 CET 2025

[2025-10-29 13:19:38] START: Running container for 2890739
[2025-10-29 13:19:39] SUCCESS: Container 2e4bdeb6cba1a123c35e1123ab1f4a044fdc176baf907b1798c6bc398df49262 started for 2890739
=== Container logs for 2890739 ===
  File "/snippet.py", line 27
    print result
    ^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2890739 ===
[2025-10-29 13:19:41] INFO: Container 2e4bdeb6cba1a123c35e1123ab1f4a044fdc176baf907b1798c6bc398df49262 has stopped
